Fix: incorrect display of boolean field on the collection page

--- a/CourseProject.Web/Resources/Views/Collections/Full.pl.resx
+++ b/CourseProject.Web/Resources/Views/Collections/Full.pl.resx
@@ -53,4 +53,10 @@
     <data name="DownloadCsv" xml:space="preserve">
         <value>Pobierz jako CSV</value>
     </data>
+    <data name="No" xml:space="preserve">
+        <value>Nie</value>
+    </data>
+    <data name="Yes" xml:space="preserve">
+        <value>Tak</value>
+    </data>
 </root>
